Fixed section alignment

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -5,20 +5,11 @@
   align-items: center;
 }
 
-#about {
-  padding-top: 5em;
-  padding-bottom: 15em;
-}
-
 #bio{
   color: #589ebf;
-  margin-left: 3vw;
-  margin-right: 3vw;
-  margin-bottom: 3vw;
-  margin-top: 3vw;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
-  margin-top: 30px;
+  margin-top: 15px;
 }
