--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -62,7 +62,7 @@ hr{
   justify-content: center;
   margin-left: 5vw;
   margin-right: 5vw;
-  margin-top: 5em;
+  margin-top: 6em;
   margin-bottom: 3vw;
 }
 
